accessibility contrast fixes

--- a/scss/brand.scss
+++ b/scss/brand.scss
@@ -89,7 +89,7 @@ $common-border-radius: 2px;
 	.btn-primary {
 		background-color: $doteco-fireopal;
 		border: 0;
-		color: white;
+		color: black;
 		border-radius: 30px;
 		padding: 0.75em 1.25em;
 		font-size: 16px;
